@@ -12,12 +12,7 @@ AM_MAINTAINER_MODE
 
 dnl when going to/from release please set the nano (fourth number) right !
 dnl releases only do Wall, cvs and prerelease does Werror too
-AS_VERSION(gst-plugins, GST_PLUGINS_VERSION, 0, 7, 6, 1, GST_CVS="no", GST_CVS="yes")
-
-dnl add a suffix to apps
-if test x$program_suffix = xNONE ; then
-  program_suffix=-$GST_PLUGINS_VERSION_MAJOR.$GST_PLUGINS_VERSION_MINOR
-fi
+AS_VERSION(gst-plugins, GST_PLUGINS_VERSION, 0, 7, 6, 2, GST_CVS="no", GST_CVS="yes")
 
 AM_INIT_AUTOMAKE($PACKAGE,$VERSION)
 
@@ -32,7 +27,7 @@ dnl - library source changed -> increment REVISION
 dnl - interfaces added/removed/changed -> increment CURRENT, REVISION = 0
 dnl - interfaces added -> increment AGE
 dnl - interfaces removed -> AGE = 0
-AS_LIBTOOL(GST_PLUGINS, 0, 0, 0)
+AS_LIBTOOL(GST_PLUGINS, 1, 0, 1)
 AM_PROG_LIBTOOL
 
 dnl FIXME take something else ?
