@@ -3,7 +3,11 @@ lib_LTLIBRARIES = libgstmedia-info-@GST_MAJORMINOR@.la
 libgstmedia_info_@GST_MAJORMINOR@_la_SOURCES = media-info.c media-info-priv.c
 
 libgstmedia_info_@GST_MAJORMINOR@_la_CFLAGS = $(GST_CFLAGS) $(GST_PLUGIN_CFLAGS)
-libgstmedia_info_@GST_MAJORMINOR@_la_LIBADD = $(GST_LIBS) $(GST_PLUGIN_LIBS)
+libgstmedia_info_@GST_MAJORMINOR@_la_LIBADD = \
+	$(GST_LIBS) $(GST_PLUGIN_LIBS)
+libgstmedia_info_@GST_MAJORMINOR@_la_LDFLAGS = \
+	-version-info @GST_PLUGINS_LIBVERSION@
+
 
 libincludedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/gst/media-info
 libinclude_HEADERS = media-info.h
