@@ -1,3 +1,10 @@
+2004-03-16  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* configure.ac:
+          update libtool version
+	* gst-libs/gst/media-info/Makefile.am:
+          actually use libtool version
+
 2004-03-15  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* configure.ac: fix speex detection to work with 1.0 but not 1.1
